--- a/search_popup.html
+++ b/search_popup.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <input type="text" id="searchText">
-        <button id="searchButton">Search</button>
+        <!--<button id="searchButton">Search</button>-->
     </body>
 </html>
